// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a button with Pine background and default size and foreground 1`] = `
.c1 {
  background-color: #4A773C;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button with Pine background
</button>
`;

exports[`Renders a button with Pine foreground and default size and background 1`] = `
.c1 {
  background-color: #D73F09;
  color: #4A773C;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button with Pine foreground
</button>
`;

exports[`Renders a default button with orange background and white foreground 1`] = `
.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button
</button>
`;

exports[`Renders a large button with default colors 1`] = `
.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: 1rem 1.8rem;
  font-size: 18px;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a large small button
</button>
`;

exports[`Renders a small button with default colors 1`] = `
.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .2rem .3rem;
  font-size: 14px;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a button small button
</button>
`;

exports[`Renders a super button with all the props changed: bg, fg, size 1`] = `
.c1 {
  background-color: #006A8E;
  color: #E9E5E4;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: 1rem 1.8rem;
  font-size: 18px;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

<button
  class="c0 c1"
>
  I am a super button
</button>
`;

exports[`Renders default CloseButton with the SVG close icon 1`] = `
.c1 {
  background-color: #D73F09;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding: .6rem 1.4rem;
}

.c0 + .c0 {
  margin-left: 8px;
}

.c1:disabled {
  cursor: not-allowed;
}

.c3 {
  color: #7B746F;
  background-color: transparent;
}

.c2 {
  color: #000000;
  background: transparent;
  padding: 1rem 2rem;
  font-size: 2.4rem;
}

<button
  class="c0 c1 c2 closeButton"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-xmark c3"
    data-icon="xmark"
    data-prefix="fal"
    focusable="false"
    role="img"
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M315.3 411.3c-6.253 6.253-16.37 6.253-22.63 0L160 278.6l-132.7 132.7c-6.253 6.253-16.37 6.253-22.63 0c-6.253-6.253-6.253-16.37 0-22.63L137.4 256L4.69 123.3c-6.253-6.253-6.253-16.37 0-22.63c6.253-6.253 16.37-6.253 22.63 0L160 233.4l132.7-132.7c6.253-6.253 16.37-6.253 22.63 0c6.253 6.253 6.253 16.37 0 22.63L182.6 256l132.7 132.7C321.6 394.9 321.6 405.1 315.3 411.3z"
      fill="currentColor"
    />
  </svg>
  <span
    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
  >
    Close
  </span>
</button>
`;
